--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,26 @@
-backcall==0.1.0
-certifi==2019.9.11
-chardet==3.0.4
-decorator==4.4.0
-Django==2.2.5
-gunicorn==19.9.0
-idna==2.8
-ipython==7.8.0
+backcall==0.2.0
+certifi==2022.12.7
+chardet==5.1.0
+decorator==5.1.1
+Django==4.1.7
+gunicorn==20.1.0
+idna==3.4
+ipython==8.13.1
 ipython-genutils==0.2.0
-jedi==0.15.1
-parso==0.5.1
-pexpect==4.7.0
+jedi==0.18.2
+parso==0.8.3
+pexpect==4.8.0
 pickleshare==0.7.5
-prompt-toolkit==2.0.9
-psycopg2==2.8.3
-ptyprocess==0.6.0
-Pygments==2.4.2
-pytz==2019.2
-requests==2.22.0
-six==1.12.0
-sqlparse==0.3.0
-traitlets==4.3.2
-urllib3==1.25.6
-wcwidth==0.1.7
+prompt-toolkit==3.0.38
+psycopg2==3.1.9
+ptyprocess==0.7.0
+Pygments==2.15.1
+pytz==2023.3
+requests==2.29.0
+six==1.16.0
+sqlparse==0.4.4
+traitlets==5.9.0
+urllib3==2.0.1
+wcwidth==0.2.6
+pdoc3 == 0.10.0
+Markdown == 3.4.3
